# DUNE-mlmc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile.am  config.h.cmake  configure.ac  dune-mlmc.pc.in  dune.module
cluster/: power2.py  speedup.py
cluster/cheops/: cheops_batch_speedup_000002_cheops_intel.hybrid  cheops_batch_speedup_000004_cheops_intel.hybrid  cheops_batch_speedup_000008_cheops_intel.hybrid  cheops_batch_speedup_000016_cheops_intel.hybrid  cheops_batch_speedup_000032_cheops_intel.hybrid  cheops_batch_speedup_000064_cheops_intel.hybrid  intel.hybrid  intel.pure
cluster/cheops/8x8/: cheops_batch_speedup_000002_cheops_intel.pure  cheops_batch_speedup_000004_cheops_intel.pure  cheops_batch_speedup_000008_cheops_intel.pure  cheops_batch_speedup_000016_cheops_intel.pure  cheops_batch_speedup_000032_cheops_intel.pure  cheops_batch_speedup_000064_cheops_intel.pure  cheops_batch_speedup_000128_cheops_intel.pure  cheops_batch_speedup_000256_cheops_intel.pure
cluster/supermuc/: .supermuc_test.swp  batch_speedup_000008_supermuc_phase2.hybrid  batch_speedup_000016_supermuc_phase2.hybrid  batch_speedup_000032_supermuc_phase2.hybrid  batch_speedup_000064_supermuc_phase2.hybrid  batch_speedup_000128_supermuc_phase2.hybrid  batch_speedup_000256_supermuc_phase2.hybrid  batch_speedup_000512_supermuc_phase2.hybrid  batch_speedup_001024_supermuc_phase2.hybrid  batch_speedup_pow2_000280_supermuc_phase2.pure  batch_speedup_pow2_000532_supermuc_phase2.pure  batch_speedup_pow2_001036_supermuc_phase2.pure  batch_speedup_pow2_002072_supermuc_phase2.pure  batch_speedup_pow2_004116_supermuc_phase2.pure  batch_speedup_pow2_008204_supermuc_phase2.pure  phase2.hybrid  phase2.pure
cmake/modules/: CMakeLists.txt  DuneMlmcMacros.cmake  Makefile.am
doc/: Makefile.am
doc/doxygen/: Doxylocal
dune/: Makefile.am
dune/mlmc/: CMakeLists.txt  Makefile.am  differences.hh  mlmc.hh  msfem.cc  msfem.hh
dune/mlmc/test/: CMakeLists.txt  full_mlmc.mini
m4/: CMakeLists.txt  Makefile.am  dune-mlmc.m4
parameter_files/: cheops.ini  random.ini  random_0.01.ini  supermuc_test.ini
src/: CMakeLists.txt  Makefile.am  dune_mlmc.cc  dune_mlmc.hh  mlmc.hh  surfaceflow.hh
