
add_executable("dune_mlmc" dune_mlmc.cc)
target_link_dune_default_libraries("dune_mlmc")
target_link_libraries(dune_mlmc fftw3_mpi ${FFTW_LIBRARIES})
foreach(target dune_mlmc)
  add_dune_metis_flags(${target})
  add_dune_parmetis_flags(${target})
  add_dune_superlu_flags(${target})
  add_dune_umfpack_flags(${target})
  add_dune_tbb_flags(${target})
  add_dune_alugrid_flags(${target})
  add_dune_mpi_flags(${target})
endforeach()
